/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Mohit Ballikar
 */
package baseline;
import java.io.IOException;


class Solution44 {
    public static void main(String[] args)  throws IOException
    {
        //Calls the Product Search function
        ProductSearch ps = new ProductSearch();
        ps.psearch();
    }

}