@startuml
class Solution44 {
    main(String[])
}
Solution44 *--ProductSearch

class ProductSearch{
psearch()
readUsingBufferedReader()
}
class Products{
getName()
setName()
getPrice()
setPrice()
getQuantity()
setQuantity()
}

ProductSearch -- Products

ProductSearch -- BufferedReader
ProductSearch -- FileReader

class FileReader
{
data/exercise44_input.txt
data/exercise44_output.txt
}

class BufferedReader
{
filename
input
}

@enduml